# seerrapi

./: .gitignore  README.md  pyproject.toml
src/seerrapi/: __init__.py  auth.py  base.py  blocklist.py  client.py  collection.py  context.py  errors.py  genres.py  http.py  issue.py  languages.py  media.py  movies.py  other.py  overriderule.py  person.py  public.py  regions.py  request.py  search.py  service.py  settings.py  tmdb.py  tv.py  users.py  utils.py  watchlist.py
tests/: __init__.py  conftest.py  test_auth.py  test_blocklist.py  test_client.py  test_collection.py  test_issue.py  test_media.py  test_movies.py  test_other.py  test_overriderule.py  test_person.py  test_public.py  test_request.py  test_search.py  test_service.py  test_settings.py  test_tmdb.py  test_tv.py  test_watchlist.py
