[project]
    authors = [
        { name = "Snaptraks", email = "snaptraks@gmail.com" },
    ]
    dependencies = [
        "httpx>=0.28.1",
        "pydantic>=2.12.5",
    ]
    description = "API wrapper around the Seerr API"
    name = "seerrapi"
    readme = "README.md"
    requires-python = ">=3.12"
    version = "2026.03.1"

[build-system]
    build-backend = "uv_build"
    requires      = [ "uv_build>=0.10.6,<0.11.0" ]

[dependency-groups]
    dev = [
        "pytest-asyncio>=1.3.0",
        "pytest>=9.0.2",
        "rich>=14.3.3",
    ]

[tool.pytest.ini_options]
    asyncio_default_fixture_loop_scope = "session"

[tool.ruff.lint]
    ignore = [
        "ANN401", # any-type
        "SLF001", # private-member-access
    ]

[tool.ruff.lint.flake8-type-checking]
    runtime-evaluated-base-classes = [
        "pydantic.BaseModel",
        "seerrapi.Base",
        "seerrapi.Stateful",
    ]

[tool.ruff.lint.per-file-ignores]
    # Ignore rules in the "tests" directory
    "tests/*" = [
        "A004", # builtin-import-shadowing
        "D",    # pydocstyle errors
        "S101", # assert
    ]

    # Ignore rules in the "src" directory
    "src/*" = [
        "RUF009", # function-call-in-dataclass-default-argument (because of pydantic
    ]
